# ai-docs

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CAD_DRAWING_GRAPH_PLAN.md  CLAUDE.md  DEVPLAN.md  DXF_CAD_DEVELOPMENT_PLAN.md  LICENSE  Makefile  PLAN.md  README.md  deep-research-report.md  dorabotka_eskd.txt  install.sh  plan_claude.md  plan_codex.md  promt.md  pyproject.toml  refact.md  update.sh
backend/: Dockerfile  Dockerfile.dev  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: auth.py  config.py  dependencies.py  formatting.py  main.py  security.py  storage.py
backend/app/ai/: __init__.py  agent_config.py  agent_loop.py  assembly_extractor.py  assignment_groups.py  audit.py  cad_dfm.py  cad_drawing_graph.py  cad_engineering_graph.py  cad_engineering_verify.py  cad_entity_metrics.py  cad_hypothesis.py  cad_pipeline_manifest.py  cad_profile.py  cad_validate.py  cad_vectorizer_status.py  capability_builder.py  capability_manifest.py  capability_sandbox.py  comfyui_client.py  comfyui_models.py  confidence.py  context_compressor.py  corrections.py  degradation.py  drawing_cleanup.py  drawing_extractor.py  drawing_preprocessor.py  drawing_validator.py  drawing_vectorize.py  embeddings.py  eskd_profile.py  extraction_prompts.py  fast_intent_router.py  flow_awareness.py  gateway_config.py  gpu_lock.py  gpu_manager.py  graph_analytics.py  hd_tiles.py  (+57 more)
backend/app/api/: admin.py  admin_graph.py  agent.py  agent_actions.py  agent_control_plane.py  ai_settings.py  aiagent_gateway.py  anomalies.py  approvals.py  audit.py  auth.py  auto_approval.py  boms.py  calendar.py  canonical.py  canvas.py  capability_router.py  cases.py  chat_sessions.py  collections.py  comfyui_admin.py  comfyui_proxy.py  comments.py  compare.py  dashboard.py  devices.py  documents.py  draft_email.py  drawings.py  dynamic_skill_runner.py  email.py  email_templates.py  engineering.py  export.py  graph.py  handovers.py  health.py  image_generation.py  invoices.py  llamacpp_api.py  (+31 more)
backend/app/audit/: service.py
backend/app/auth/: __init__.py  jwt.py  models.py  user_service.py
backend/app/chat/: store.py  user_key.py
backend/app/core/: chat_bus.py  metrics.py
backend/app/db/: base.py  models.py  session.py  text_search.py
backend/app/domain/: access.py  admin.py  aiagent_gateway.py  analysis_solvers.py  anomalies.py  approvals.py  calendar.py  collections.py  compare.py  document_deletion.py  documents.py  drawing_graph.py  drawings.py  email.py  engineering.py  formula_engine.py  graph.py  invoices.py  memory_builder.py  mentions.py  models.py  normalization.py  ntd.py  ntd_checker.py  ntd_parser.py  openclaw_gateway.py  org.py  pipeline.py  projects.py  schemas.py  services.py  sheet_templates.py  storage.py  suppliers.py  table_spec.py  tables.py  technology.py  tool_catalog.py  workspace.py
backend/app/integrations/: telegram_bot.py  telegram_notifier.py
backend/app/middleware/: csrf.py  prometheus.py  rate_limit.py  security.py
backend/app/scripts/: seed_data.py  (+2 more)
backend/data/: canvas_skill_map.json
backend/migrations/: README.md  env.py
backend/scripts/: download_public_drawings.py  eval_cad_descriptions.py  eval_cad_drawing_graphs.py  eval_cad_manifest.py  eval_critical_corruption.py  eval_drawing_vlm.py  eval_vectorize.py  export_correction_dataset.py  export_self_learning_pairs.py  gate_vectorizer_candidate.py  step_to_views.py
backend/tests/: conftest.py  test_admin.py  test_agent_actions.py  test_agent_control_plane.py  test_agent_cron_dispatch.py  test_agent_live_realistic.py  test_agent_routing_golden.py  test_agent_workspace_realistic.py  test_ai_presets_telemetry.py  test_ai_settings.py  test_all_scenarios_yaml.py  test_anomalies.py  test_api_cases.py  test_api_technology_extended.py  test_approvals.py  test_assignment_groups.py  test_audit_quality.py  test_auth_api.py  test_auth_jwks_cache.py  test_auth_jwt.py  test_auto_approval.py  test_boms.py  test_calendar.py  test_canonical.py  test_canvas.py  test_capability_catalog_consistency.py  test_capability_router.py  test_capability_sandbox_ast.py  test_capability_sandbox_smoke.py  test_chat_sessions.py  test_checksum_gate.py  test_collaboration.py  test_collections.py  test_comments.py  test_compare.py  test_confidence_threshold_gate.py  test_dashboard.py  test_departments_api.py  test_desktop_output.py  test_device_unlock.py  (+100 more)
(+822 files in other folders)
